--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -4,8 +4,7 @@
     <item>Diagramme</item>
     <item>Kurze Zusammenfassung</item>
     <item>Liste</item>
-    <item>Übersicht 1</item>
-    <item>Übersicht 2</item>
+    <item>Übersicht</item>
     <item>Kleine Liste</item>
     <item>Kleine Übersicht 1</item>
     <item>Kleine Übersicht 2</item>
@@ -22,8 +21,7 @@
     <item>Diagramme</item>
     <item>Kurze Zusammenfassung</item>
     <item>Liste</item>
-    <item>Übersicht 1</item>
-    <item>Übersicht 2</item>
+    <item>Übersicht</item>
     <item>Kleine Liste</item>
     <item>Kleine Übersicht 1</item>
     <item>Kleine Übersicht 2</item>
