--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,8 +6,8 @@
     <item>List</item>
     <item>Tile</item>
     <item>Small List</item>
-    <item>Small Tile 1</item>
-    <item>Small Tile 2</item>
+    <item>Small Tile</item>
+    <item>Ticker</item>
     <item>Table</item>
     <item>Block</item>
     <item>Summary</item>
@@ -23,8 +23,8 @@
     <item>List</item>
     <item>Tile</item>
     <item>Small List</item>
-    <item>Small Tile 1</item>
-    <item>Small Tile 2</item>
+    <item>Small Tile</item>
+    <item>Ticker</item>
     <item>Table</item>
     <item>Block</item>
     <item>Summary</item>
