--- a/app/src/main/res/layout/stockroom_smalltile1_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile1_item.xml
@@ -5,10 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:layout_marginEnd="1dp"
-    android:layout_marginStart="1dp"
-    android:layout_marginTop="1dp"
+    android:layout_margin="1dp"
     >
 
   <TextView
