--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -6,8 +6,8 @@
     <item>Liste</item>
     <item>Übersicht</item>
     <item>Kleine Liste</item>
-    <item>Kleine Übersicht 1</item>
-    <item>Kleine Übersicht 2</item>
+    <item>Kleine Übersicht</item>
+    <item>Ticker</item>
     <item>Tabelle</item>
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
@@ -23,8 +23,8 @@
     <item>Liste</item>
     <item>Übersicht</item>
     <item>Kleine Liste</item>
-    <item>Kleine Übersicht 1</item>
-    <item>Kleine Übersicht 2</item>
+    <item>Kleine Übersicht</item>
+    <item>Ticker</item>
     <item>Tabelle</item>
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
