--- a/app/src/main/res/layout/stockroom_smalllist_item.xml
+++ b/app/src/main/res/layout/stockroom_smalllist_item.xml
@@ -59,7 +59,9 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:textSize="12sp"
-        android:layout_marginEnd="2dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:paddingBottom="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
