--- a/app/src/main/res/layout/stockroom_smalltile1_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile1_item.xml
@@ -47,6 +47,7 @@
         android:gravity="end"
         android:textSize="12sp"
         android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
