--- a/app/src/main/res/layout/stockroom_smalllist_item.xml
+++ b/app/src/main/res/layout/stockroom_smalllist_item.xml
@@ -35,6 +35,7 @@
         android:id="@+id/smalllist_textViewSymbol"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:layout_marginStart="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
