--- a/app/src/main/res/layout/stockroom_table_item.xml
+++ b/app/src/main/res/layout/stockroom_table_item.xml
@@ -23,6 +23,7 @@
   <TextView
       android:id="@+id/tableDataSymbol"
       style="@style/table_item_style"
+      android:textStyle="bold"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@id/guideline2"
