--- a/app/src/main/res/layout/stockroom_smalltile1_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile1_item.xml
@@ -33,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="4dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guideline2"
