--- a/app/src/main/res/layout/dialog_remove_asset.xml
+++ b/app/src/main/res/layout/dialog_remove_asset.xml
@@ -89,9 +89,30 @@
       </com.google.android.material.textfield.TextInputLayout>
 
       <TextView
+          android:id="@+id/textViewAccount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="@string/note"
+          android:text="@string/account"
+          app:layout_constraintBottom_toBottomOf="@+id/textViewAssetAccount"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textViewAssetAccount"
+          />
+      <TextView
+          android:id="@+id/textViewAssetAccount"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="32dp"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/commission"
           app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
           app:layout_constraintEnd_toStartOf="@+id/guideline1"
           app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +126,41 @@
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+          app:layout_constraintTop_toBottomOf="@+id/textViewAssetAccount"
+          app:endIconMode="clear_text"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/addCommission"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/textInputEditText"
+            android:digits="0123456789.,"
+            android:gravity="end"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
+            android:maxLines="1"
+            android:textAlignment="textEnd"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/note"
+          app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
+          app:layout_constraintHorizontal_bias="0.0"
+          />
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/textInputLayout4"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
@@ -123,7 +178,7 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:datePickerMode="calendar"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
           />
 
       <com.thecloudsite.stockroom.CustomTimePicker
