--- a/app/src/main/res/layout/dialog_add_dividend.xml
+++ b/app/src/main/res/layout/dialog_add_dividend.xml
@@ -53,6 +53,27 @@
       </com.google.android.material.textfield.TextInputLayout>
 
       <TextView
+          android:id="@+id/textViewAccount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/account"
+          app:layout_constraintBottom_toBottomOf="@+id/textViewAssetAccount"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textViewAssetAccount"
+          />
+      <TextView
+          android:id="@+id/textViewAssetAccount"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="32dp"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          />
+
+      <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/note"
@@ -69,7 +90,7 @@
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintTop_toBottomOf="@+id/textViewAssetAccount"
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
