--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -13,7 +13,7 @@
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
     <item>Zeitachse Kauf/Verkauf</item>
-    <item>Zeitachse Gewinn/Verlust</item>
+    <item>Zeitachse Ausgeführter Gewinn/Verlust</item>
     <item>Zeitachse Ereignisse</item>
     <item>Zeitachse Dividenden</item>
   </string-array>
@@ -30,7 +30,7 @@
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
     <item>Kauf/Verkauf</item>
-    <item>Gewinn/Verlust</item>
+    <item>Ausgeführter Gewinn/Verlust</item>
     <item>Ereignisse</item>
     <item>Dividenden</item>
   </string-array>
