--- a/app/src/main/res/layout/db_dividend_type_item.xml
+++ b/app/src/main/res/layout/db_dividend_type_item.xml
@@ -100,12 +100,12 @@
   <View
       style="@style/db_item_vertical_line"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline6"
+      app:layout_constraintStart_toStartOf="@+id/guideline8"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
   <TextView
-      android:id="@+id/db_dividend_exdate"
+      android:id="@+id/db_dividend_account"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline6"
@@ -121,11 +121,27 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_note"
+      android:id="@+id/db_dividend_exdate"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline7"
       app:layout_constraintEnd_toStartOf="@id/guideline8"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline8"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <TextView
+      android:id="@+id/db_dividend_note"
+      style="@style/db_item_style"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline8"
+      app:layout_constraintEnd_toStartOf="@id/guideline9"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -190,7 +206,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="940dp"
+      app:layout_constraintGuide_begin="840dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline9"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="1090dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
