--- a/app/src/main/res/layout/dividend_received_view_item.xml
+++ b/app/src/main/res/layout/dividend_received_view_item.xml
@@ -37,6 +37,7 @@ limitations under the License. -->
         android:background="?android:attr/listDivider"
         />
       <TextView
+          android:id="@+id/dividend_received_summary_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
