add transaction view

--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -12,6 +12,7 @@
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
+    <item>Transaktionen</item>
     <item>Zeitachse Kauf/Verkauf</item>
     <item>Zeitachse Ausgeführter Gewinn/Verlust</item>
     <item>Zeitachse Ereignisse</item>
@@ -29,6 +30,7 @@
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
+    <item>Transaktionen</item>
     <item>Kauf/Verkauf</item>
     <item>Ausgeführter Gewinn/Verlust</item>
     <item>Ereignisse</item>
