--- a/app/src/main/res/layout/stockroom_smalltile2_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile2_item.xml
@@ -20,23 +20,24 @@
     <TextView
         android:id="@+id/smalltile_textViewSymbol"
         android:textStyle="bold"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guideline1"
+        app:layout_constraintEnd_toStartOf="@+id/smalltile_textViewMarketPrice"
         />
 
     <TextView
         android:id="@+id/smalltile_textViewMarketPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
+        android:textAlignment="viewEnd"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline1"
+        app:layout_constraintStart_toEndOf="@+id/smalltile_textViewSymbol"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
@@ -47,7 +48,7 @@
         android:gravity="end"
         android:textSize="12sp"
         android:layout_margin="2dp"
-        app:layout_constraintTop_toBottomOf="@id/smalltile_textViewSymbol"
+        app:layout_constraintTop_toBottomOf="@id/smalltile_textViewMarketPrice"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
