--- a/app/src/main/res/layout/stockroom_smalltile2_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile2_item.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/smalltile_textViewMarketPrice"
+        app:layout_constraintBottom_toTopOf="@+id/guideline1"
         />
 
     <TextView
@@ -39,6 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/smalltile_textViewSymbol"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline1"
         />
 
     <TextView
@@ -48,18 +50,17 @@
         android:gravity="end"
         android:textSize="12sp"
         android:layout_margin="2dp"
-        app:layout_constraintTop_toBottomOf="@id/smalltile_textViewMarketPrice"
+        app:layout_constraintTop_toBottomOf="@+id/guideline1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <androidx.constraintlayout.widget.Guideline
+    <androidx.constraintlayout.widget.Barrier
         android:id="@+id/guideline1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="12dp"
+        app:barrierDirection="top"
         />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
