--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,7 +168,7 @@ limitations under the License. -->
     <item name="android:background">@drawable/calc_function_roundcorner</item>
   </style>
 
-  <style name="calc_inidicator_style">
+  <style name="calc_indicator_style">
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:textSize">12sp</item>
