--- a/app/src/main/res/layout/db_storedata_type_item.xml
+++ b/app/src/main/res/layout/db_storedata_type_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/db_dividend_layout"
+    android:id="@+id/db_storedata_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
@@ -9,7 +9,7 @@
     >
 
   <TextView
-      android:id="@+id/db_dividend_id"
+      android:id="@+id/db_storedata_keyid"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_symbol"
+      android:id="@+id/db_storedata_data"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
@@ -41,7 +41,7 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_amount"
+      android:id="@+id/db_storedata_value"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
@@ -57,7 +57,7 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_cycle"
+      android:id="@+id/db_storedata_datetime"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline3"
@@ -73,7 +73,7 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_paydate"
+      android:id="@+id/db_storedata_type"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline4"
@@ -89,59 +89,11 @@
       />
 
   <TextView
-      android:id="@+id/db_dividend_type"
+      android:id="@+id/db_storedata_note"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline5"
       app:layout_constraintEnd_toStartOf="@id/guideline6"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <View
-      style="@style/db_item_vertical_line"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline6"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <TextView
-      android:id="@+id/db_dividend_account"
-      style="@style/db_item_style"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/guideline6"
-      app:layout_constraintEnd_toStartOf="@id/guideline7"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <View
-      style="@style/db_item_vertical_line"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline7"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <TextView
-      android:id="@+id/db_dividend_exdate"
-      style="@style/db_item_style"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/guideline7"
-      app:layout_constraintEnd_toStartOf="@id/guideline8"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <View
-      style="@style/db_item_vertical_line"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline8"
-      app:layout_constraintBottom_toBottomOf="parent"
-      />
-
-  <TextView
-      android:id="@+id/db_dividend_note"
-      style="@style/db_item_style"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/guideline8"
-      app:layout_constraintEnd_toStartOf="@id/guideline9"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -150,7 +102,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="50dp"
+      app:layout_constraintGuide_begin="100dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -158,7 +110,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="110dp"
+      app:layout_constraintGuide_begin="300dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -166,7 +118,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="210dp"
+      app:layout_constraintGuide_begin="420dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -174,7 +126,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="310dp"
+      app:layout_constraintGuide_begin="560dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -182,7 +134,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="450dp"
+      app:layout_constraintGuide_begin="660dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -190,31 +142,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="550dp"
-      />
-
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline7"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_begin="690dp"
-      />
-
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline8"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_begin="840dp"
-      />
-
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline9"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_begin="1090dp"
+      app:layout_constraintGuide_begin="860dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
