--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -12,12 +12,15 @@
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
-    <item>Portfolio Transaktionen</item>
+    <item>Transaktionen</item>
     <item>Alle Transaktionen</item>
-    <item>Zeitachse Kauf/Verkauf</item>
     <item>Zeitachse Ausgeführter Gewinn/Verlust</item>
+    <item>Zeitachse Käufe/Verkäufe</item>
+    <item>Zeitachse Alle Käufe/Verkäufe</item>
     <item>Zeitachse Ereignisse</item>
+    <item>Zeitachse Alle Ereignisse</item>
     <item>Zeitachse Dividenden</item>
+    <item>Zeitachse Alle Dividenden</item>
   </string-array>
   <string-array name="displayed_views_headers">
     <item>Diagramme</item>
@@ -31,12 +34,15 @@
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
     <item>Nachrichten</item>
-    <item>Portfolio Transaktionen</item>
+    <item>Transaktionen</item>
     <item>Alle Transaktionen</item>
-    <item>Kauf/Verkauf</item>
     <item>Ausgeführter Gewinn/Verlust</item>
+    <item>Käufe/Verkäufe</item>
+    <item>Alle Käufe/Verkäufe</item>
     <item>Ereignisse</item>
+    <item>Alle Ereignisse</item>
     <item>Dividenden</item>
+    <item>Alle Dividenden</item>
   </string-array>
   <string-array name="quoteTypes">
     <item>Aktie</item>
