add portfolio/all gainloss timeline

--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -15,6 +15,7 @@
     <item>Transaktionen</item>
     <item>Alle Transaktionen</item>
     <item>Zeitachse Ausgeführter Gewinn/Verlust</item>
+    <item>Zeitachse Alle ausgeführten Gewinne/Verluste</item>
     <item>Zeitachse Käufe/Verkäufe</item>
     <item>Zeitachse Alle Käufe/Verkäufe</item>
     <item>Zeitachse Ereignisse</item>
@@ -37,6 +38,7 @@
     <item>Transaktionen</item>
     <item>Alle Transaktionen</item>
     <item>Ausgeführter Gewinn/Verlust</item>
+    <item>Alle ausgeführten Gewinne/Verluste</item>
     <item>Käufe/Verkäufe</item>
     <item>Alle Käufe/Verkäufe</item>
     <item>Ereignisse</item>
