--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -166,6 +166,16 @@
             android:textAppearance="@android:style/TextAppearance.Medium"
             />
 
+        <TextView
+            android:id="@+id/textViewStockLegend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="12sp"
+            />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
