--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -236,6 +236,17 @@ limitations under the License. -->
     <item name="android:background">@drawable/calc_shift_roundcorner</item>
   </style>
 
+  <style name="stock_legend">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginStart">16dp</item>
+    <item name="android:layout_marginEnd">16dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:background">@color/backgroundListColor</item>
+  </style>
+
   <declare-styleable name="Editor">
     <attr name="text" format="string" />
     <attr name="textSize" format="dimension"/>
