--- a/app/src/main/res/layout/stockroom_table_item.xml
+++ b/app/src/main/res/layout/stockroom_table_item.xml
@@ -182,7 +182,7 @@
       />
 
   <TextView
-      android:id="@+id/tableDataDividend"
+      android:id="@+id/tableDataAssetTotalCommission"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline11"
@@ -198,7 +198,7 @@
       />
 
   <TextView
-      android:id="@+id/tableDataAlertBelow"
+      android:id="@+id/tableDataDividend"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline12"
@@ -214,7 +214,7 @@
       />
 
   <TextView
-      android:id="@+id/tableDataAlertAbove"
+      android:id="@+id/tableDataAlertBelow"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline13"
@@ -230,7 +230,7 @@
       />
 
   <TextView
-      android:id="@+id/tableDataAssets"
+      android:id="@+id/tableDataAlertAbove"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline14"
@@ -246,7 +246,7 @@
       />
 
   <TextView
-      android:id="@+id/tableDataEvents"
+      android:id="@+id/tableDataAssets"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline15"
@@ -262,11 +262,27 @@
       />
 
   <TextView
-      android:id="@+id/tableDataNote"
+      android:id="@+id/tableDataEvents"
       style="@style/table_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline16"
       app:layout_constraintEnd_toStartOf="@id/guideline17"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/table_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline17"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <TextView
+      android:id="@+id/tableDataNote"
+      style="@style/table_item_style"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline17"
+      app:layout_constraintEnd_toStartOf="@id/guideline18"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -363,7 +379,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1360dp"
+      app:layout_constraintGuide_begin="1330dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -387,7 +403,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1910dp"
+      app:layout_constraintGuide_begin="1660dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -395,7 +411,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="2160dp"
+      app:layout_constraintGuide_begin="2010dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -403,7 +419,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="2420dp"
+      app:layout_constraintGuide_begin="2260dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline18"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="2520dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
