add type to stock_table

--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -359,6 +359,17 @@
               android:gravity="center_horizontal|center_vertical"
               />
 
+          <Spinner
+              android:id="@+id/stockTypeSpinner"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="8dp"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
+              android:layout_marginBottom="16dp"
+              android:entries="@array/stock_type_items"
+              />
+
         </LinearLayout>
 
         <View style="@style/Divider"/>
