--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -31,6 +31,17 @@ limitations under the License. -->
         android:textSize="18sp"
         />
 
+    <Spinner
+        android:id="@+id/stockTypeSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:entries="@array/stock_type_items"
+        />
+
     <Button
         android:id="@+id/button_add"
         android:layout_width="match_parent"
