--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -39,7 +39,7 @@ limitations under the License. -->
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:entries="@array/stock_type_items"
+        android:entries="@array/stocktype_items"
         />
 
     <Button
