--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -359,6 +359,15 @@
               android:gravity="center_horizontal|center_vertical"
               />
 
+          <View style="@style/Divider"/>
+
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/stocktype_header"
+              style="@style/section_header"
+              />
+
           <Spinner
               android:id="@+id/stockTypeSpinner"
               android:layout_width="wrap_content"
@@ -367,7 +376,7 @@
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="16dp"
-              android:entries="@array/stock_type_items"
+              android:entries="@array/stocktype_items"
               />
 
         </LinearLayout>
